--- a/install.ipynb
+++ b/install.ipynb
@@ -11,10 +11,10 @@
     "import zipfile\n",
     "\n",
     "# Define the folder structure and files\n",
-    "base_dir = \"vm_vs_docker_benchmark\"\n",
-    "notebooks_dir = os.path.join(base_dir, \"notebooks\")\n",
-    "scripts_dir = os.path.join(base_dir, \"scripts\")\n",
-    "results_dir = os.path.join(base_dir, \"results\")\n",
+    "base_dir = \"vm_vs_docker_benchmark\"\n",  #Nombre de la carpeta mas el path n/n/vm_vs_docker_bechmark
+    "notebooks_dir = os.path.join(base_dir, \"notebooks\")\n", #Me crea una carpeta llamada notebook 
+    "scripts_dir = os.path.join(base_dir, \"scripts\")\n", #Me crea una carpeta llamada scripts
+    "results_dir = os.path.join(base_dir, \"results\")\n", #Me crea una carpeta llamada resuls
     "\n",
     "# Create directories\n",
     "os.makedirs(notebooks_dir, exist_ok=True)\n",
