--- a/install.ipynb
+++ b/install.ipynb
@@ -1,87 +1,104 @@
-import os
-import zipfile
-
-# Define the folder structure and files
-base_dir = "vm_vs_docker_benchmark" #Nombre de la carpeta mas el path n/n/vm_vs_docker_bechmark
-notebooks_dir = os.path.join(base_dir, "notebooks") #Me crea una carpeta llamada notebook 
-scripts_dir = os.path.join(base_dir, "scripts") #Me crea una carpeta llamada scripts
-results_dir = os.path.join(base_dir, "results") #Me crea una carpeta llamada resuls
-
-# Create directories
-os.makedirs(notebooks_dir, exist_ok=True)
-os.makedirs(scripts_dir, exist_ok=True)
-os.makedirs(results_dir, exist_ok=True)
-
-# Create notebook placeholder
-notebook_path = os.path.join(notebooks_dir, "vm_vs_docker_comparison.ipynb")
-with open(notebook_path, "w", encoding="utf-8") as f:
-    f.write("# Your benchmarking notebook goes here")
-
-# Create shell scripts
-vm_script = """#!/bin/bash
-echo "🚀 Setting up environment for benchmarking..."
-sudo apt update && sudo apt upgrade -y
-sudo apt install -y python3 python3-pip sysbench docker.io git curl procps
-pip3 install --upgrade pip
-pip3 install jupyter matplotlib psutil
-sudo usermod -aG docker $USER
-echo "✅ Setup complete! Please restart your VM for Docker permissions to take effect."
-echo "➡️ To start Jupyter, run: jupyter notebook"
-"""
-
-docker_script = """#!/bin/bash
-echo "🐳 Setting up Docker environment for benchmarking..."
-sudo apt update && sudo apt upgrade -y
-sudo apt install -y python3 python3-pip sysbench git curl procps
-pip3 install --upgrade pip
-pip3 install jupyter matplotlib psutil
-echo "✅ Docker/WSL2 setup complete!"
-echo "➡️ To start Jupyter Notebook, run: jupyter notebook --ip=0.0.0.0 --port=8888 --no-browser"
-"""
-
-dockerfile = """FROM python:3.10-slim
-RUN apt update && apt install -y sysbench git curl procps \\
-    && pip install --upgrade pip \\
-    && pip install jupyter matplotlib psutil
-WORKDIR /app
-COPY . .
-EXPOSE 8888
-CMD ["jupyter", "notebook", "--ip=0.0.0.0", "--allow-root", "--NotebookApp.token=''"]
-"""
-# Create README
-readme = """# VM vs Docker Performance Benchmark Project
-
-This project compares resource usage and performance metrics between a full virtual machine (VirtualBox) and a Docker container.
-
-## 🔧 Project Structure
-- `notebooks/`: Jupyter Notebook for running and plotting benchmarks
-- `scripts/`: Setup scripts for VM, Docker, and Dockerfile itself
-- `results/`: Placeholder for benchmark results
-
-## 📦 Requirements
-- Python 3.8+
-- Docker (host or WSL2)
-- VirtualBox (with a Linux guest)
-- `sysbench`, `jupyter`, `matplotlib`, `psutil`
-
-## 🚀 Quick Start
-```bash
-# On VM or Docker:
-cd scripts
-bash vm_setup.sh      # For VirtualBox
-bash docker_setup.sh  # For Docker or WSL2"""
-# Create a zip file of the project
-with open(os.path.join(scripts_dir, "vm_setup.sh"), "w", encoding="utf-8") as f:
-    f.write(vm_script)
-
-with open(os.path.join(scripts_dir, "docker_setup.sh"), "w", encoding="utf-8") as f:
-    f.write(docker_script)
-
-with open(os.path.join(scripts_dir, "Dockerfile"), "w", encoding="utf-8") as f:
-    f.write(dockerfile)
-
-with open(os.path.join(base_dir, "README.md"), "w", encoding="utf-8") as f:
-    f.write(readme)
-
-with open(os.path.join(base_dir, ".gitignore"), "w", encoding="utf-8") as f:
-    f.write("__pycache__/\n*.pyc\n*.ipynb_checkpoints/\n")
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d95e1c58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Ruta base del proyecto (ajusta si es necesario)\n",
+    "base_dir = r\"C:\\Users\\kikir\\VM-Docker\\vm_vs_docker_benchmark\"\n",
+    "\n",
+    "# Crear subdirectorios\n",
+    "notebooks_dir = os.path.join(base_dir, \"notebooks\")\n",
+    "scripts_dir = os.path.join(base_dir, \"scripts\")\n",
+    "results_dir = os.path.join(base_dir, \"results\")\n",
+    "\n",
+    "os.makedirs(notebooks_dir, exist_ok=True)\n",
+    "os.makedirs(scripts_dir, exist_ok=True)\n",
+    "os.makedirs(results_dir, exist_ok=True)\n",
+    "\n",
+    "# Crear archivo de notebook placeholder\n",
+    "notebook_path = os.path.join(notebooks_dir, \"vm_vs_docker_comparison.ipynb\")\n",
+    "with open(notebook_path, \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(\"# Your benchmarking notebook goes here\")\n",
+    "\n",
+    "# Script para VM\n",
+    "vm_script = \"\"\"#!/bin/bash\n",
+    "echo \"🚀 Setting up environment for benchmarking...\"\n",
+    "sudo apt update && sudo apt upgrade -y\n",
+    "sudo apt install -y python3 python3-pip sysbench docker.io git curl procps\n",
+    "pip3 install --upgrade pip\n",
+    "pip3 install jupyter matplotlib psutil\n",
+    "sudo usermod -aG docker $USER\n",
+    "echo \"✅ Setup complete! Please restart your VM for Docker permissions to take effect.\"\n",
+    "echo \"➡️ To start Jupyter, run: jupyter notebook\"\n",
+    "\"\"\"\n",
+    "\n",
+    "# Script para Docker/WSL2\n",
+    "docker_script = \"\"\"#!/bin/bash\n",
+    "echo \"🐳 Setting up Docker environment for benchmarking...\"\n",
+    "sudo apt update && sudo apt upgrade -y\n",
+    "sudo apt install -y python3 python3-pip sysbench git curl procps\n",
+    "pip3 install --upgrade pip\n",
+    "pip3 install jupyter matplotlib psutil\n",
+    "echo \"✅ Docker/WSL2 setup complete!\"\n",
+    "echo \"➡️ To start Jupyter Notebook, run: jupyter notebook --ip=0.0.0.0 --port=8888 --no-browser\"\n",
+    "\"\"\"\n",
+    "\n",
+    "# Dockerfile\n",
+    "dockerfile = \"\"\"FROM python:3.10-slim\n",
+    "RUN apt update && apt install -y sysbench git curl procps \\\\\n",
+    "    && pip install --upgrade pip \\\\\n",
+    "    && pip install jupyter matplotlib psutil\n",
+    "WORKDIR /app\n",
+    "COPY . .\n",
+    "EXPOSE 8888\n",
+    "CMD [\"jupyter\", \"notebook\", \"--ip=0.0.0.0\", \"--allow-root\", \"--NotebookApp.token=''\"]\n",
+    "\"\"\"\n",
+    "\n",
+    "# README\n",
+    "readme = \"\"\n",
+    "\n",
+    "with open(os.path.join(scripts_dir, \"vm_setup.sh\"), \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(vm_script)\n",
+    "\n",
+    "with open(os.path.join(scripts_dir, \"docker_setup.sh\"), \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(docker_script)\n",
+    "\n",
+    "with open(os.path.join(scripts_dir, \"Dockerfile\"), \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(dockerfile)\n",
+    "\n",
+    "with open(os.path.join(base_dir, \"README.md\"), \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(readme)\n",
+    "\n",
+    "with open(os.path.join(base_dir, \".gitignore\"), \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(\"__pycache__/\\n*.pyc\\n*.ipynb_checkpoints/\\n\")"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
